fix the footer positioning on mobile phones

--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -24,9 +24,6 @@ body {
     background: linear-gradient(to right, peachpuff, burlywood);
     position: relative;
     overflow-x: hidden;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
     header {
       @include dimensions(100%, auto);
       @include respond-to(small-screens) {
@@ -315,6 +312,7 @@ body {
       }
       .news, .about-library, .news-and-events, .services, .sites-map {
         @include dimensions(65%, auto);
+        min-height: 40em;
         @include indentations(1em auto, 1em 2.2em);
         box-sizing: border-box;
         text-align: justify;
@@ -499,11 +497,7 @@ body {
           }
         }
       }
-      .about-librarian { // delete after adding a photo
-        height: 40em;
-      }
       .library-schedule {
-        height: 40em;
         text-align: center;
         p {
           @include dimensions(100%, auto);
@@ -554,7 +548,6 @@ body {
         }
       }
       .poster-ot-vsej-dushi {
-        height: 40em;
         @include respond-to(small-screens) {
           height: auto;
         }
@@ -582,7 +575,6 @@ body {
         }
       }
       .useful-links {
-        height: 40em;
         text-align: left;
         a {
           @include indentations(0.2em 0.5em, 0);
